; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_window.c_shell_new_columns.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_window.c_shell_new_columns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@firstwin = common dso_local global i32* null, align 8
@topframe = common dso_local global i32 0, align 4
@Columns = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@curwin = common dso_local global i32 0, align 4
@p_ea = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell_new_columns() #0 {
  %1 = load i32*, i32** @firstwin, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %24

4:                                                ; preds = %0
  %5 = load i32, i32* @topframe, align 4
  %6 = load i64, i64* @Columns, align 8
  %7 = trunc i64 %6 to i32
  %8 = load i32, i32* @FALSE, align 4
  %9 = load i32, i32* @TRUE, align 4
  %10 = call i32 @frame_new_width(i32 %5, i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* @topframe, align 4
  %12 = load i64, i64* @Columns, align 8
  %13 = call i32 @frame_check_width(i32 %11, i64 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @topframe, align 4
  %17 = load i64, i64* @Columns, align 8
  %18 = trunc i64 %17 to i32
  %19 = load i32, i32* @FALSE, align 4
  %20 = load i32, i32* @FALSE, align 4
  %21 = call i32 @frame_new_width(i32 %16, i32 %18, i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %15, %4
  %23 = call i32 (...) @win_comp_pos()
  br label %24

24:                                               ; preds = %22, %3
  ret void
}

declare dso_local i32 @frame_new_width(i32, i32, i32, i32) #1

declare dso_local i32 @frame_check_width(i32, i64) #1

declare dso_local i32 @win_comp_pos(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
